edited the sizes of buttons

--- a/style.css
+++ b/style.css
@@ -46,9 +46,11 @@ h1 {
 h1 + p {
   color: hsl(224, 23%, 55%);
   line-height: 1.8;
+  margin-bottom: 20px;
 }
 
 .subscription {
+  width: 95%;
   margin: 30px 15px;
   margin: auto;
   padding: 20px;
@@ -87,17 +89,19 @@ h1 + p {
 .subscription .change:hover {
   color: rgba(56, 42, 225, 0.69);
   text-decoration: none;
+  outline-color: black;
+  outline-offset: 5px;
 }
 
 .payment button {
-  width: 100%;
+  width: 95%;
   padding: 20px 0;
-  margin: 20px 15px;
+  margin: 15px;
   margin-inline: auto;
   display: block;
   border-radius: 10px;
   border: none;
-  font-size: .9rem;
+  font-size: 0.9rem;
   font-weight: bolder;
   cursor: pointer;
 }
@@ -106,6 +110,8 @@ h1 + p {
   color: white;
   background-color: #382ae1;
   transition: 0.2s;
+  box-shadow: 0 5px 10px -2px #382ae1;
+
 }
 
 .payment button:first-child:hover {
@@ -114,12 +120,7 @@ h1 + p {
 
 .payment button:last-child {
   color: hsl(224, 23%, 55%);
-}
-
-.payment button:last-child:hover {
-  color: hsl(223, 47%, 23%);
-
-  background-color: hsl(225, 100%, 98%);
+  /* background-color: white; */
 }
 
 @media (max-width: 767px) {
